# totk

./: Cargo.toml  build.ps1  info.toml  install.ps1  modPath.txt
romf/: config - Copy.json  config.json
romf/fighter/common/param/: fighter_param.prc  fighter_param.prcx  fighter_param.prcxml
romf/fighter/link/motion/body/c00/: d02specialairhi.nuanmb  d02specialhi.nuanmb  d02specialhiend.nuanmb  d02specialhihold.nuanmb  d02specialhistart.nuanmb  e00catch.nuanmb  e00catchdash.nuanmb  e00catchpull.nuanmb  e00catchturn.nuanmb  f05passivewall.nuanmb  f05passivewallattach.nuanmb  f05passivewallattachclimb.nuanmb  motion_list.motdiff  motion_list.yml
romf/sound/bank/fighter/: se_link_c00.nus3audio  se_link_c00.patch3audio
src/: agent.rs  custom_vars.rs  data.rs  frame.rs  imports.rs  lib.rs  vars.rs
src/acmd/: attachwall.rs  grabs.rs  mod.rs  specialhi.rs  specialhiend.rs  specialhihold.rs
src/status/: attachwall.rs  grabs.rs  mod.rs  specialhi.rs  specialhiend.rs  specialhiend_getup.rs  specialhihold.rs
